# ironhold

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.bat  config.toml
.github/workflows/: github_ci.yml
apps/editor_web/: Cargo.toml  index.html
apps/editor_web/src/: lib.rs
apps/host_web/: Cargo.toml
apps/host_web/src/: lib.rs
assets/: README.md  example_empty.scene.ron  example_mesh.scene.ron  example_quad.scene.ron  example_quad_and_mesh.scene.ron  example_scene.ron
assets/model/: anvil.txt
assets/textures/: Metal021.txt
crates/editor_core/: Cargo.toml
crates/editor_core/src/: lib.rs
crates/editor_ui/: Cargo.toml
crates/editor_ui/src/: lib.rs
crates/engine_assets/: Cargo.toml
crates/engine_assets/src/: lib.rs  mesh_loader.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: lib.rs
crates/engine_ecs/: Cargo.toml
crates/engine_ecs/src/: lib.rs
crates/engine_input/: Cargo.toml
crates/engine_input/src/: lib.rs
crates/engine_render/: Cargo.toml
crates/engine_render/shaders/: mesh.wgsl  quad.wgsl
crates/engine_render/src/: bg_pipeline.rs  gui_pipeline.rs  lib.rs  mesh_pipeline.rs  quad_pipeline.rs
crates/engine_scene/: Cargo.toml
crates/engine_scene/src/: lib.rs
crates/engine_types/: Cargo.toml
crates/engine_types/src/: lib.rs
crates/engine_ui/: Cargo.toml
crates/engine_ui/src/: lib.rs
crates/engine_wasm_api/: Cargo.toml
crates/engine_wasm_api/src/: helpers.rs  lib.rs
crates/platform_web/: Cargo.toml
crates/platform_web/src/: lib.rs  wgpu_init.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEV_PREFERENCES.md  DOCUMENTATION_STANDARDS.md  EDITOR_NOTES.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md  WEBGPU_SETUP.md
web/engine-npm/: README.md  package.json  tsconfig.json
web/engine-npm/src/: index.js
web/static/: build.json  editor.css  index.html
