
[workspace]
members = [
    "apps/editor_web",
    "apps/host_web",
    "crates/engine_core",
    "crates/engine_ecs",
    "crates/engine_render",
    "crates/engine_input",
    "crates/engine_assets",
    "crates/engine_scene",
    "crates/engine_ui",
    "crates/platform_web",
    "crates/editor_core",
    "crates/editor_ui",
    "crates/engine_wasm_api",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.metadata]
# npm name
npm_package = "van-geest/ironhold"

[workspace.profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[workspace.dependencies]
# central versions
bevy_ecs = "0.14"
bevy_reflect = { version = "0.14", features = ["serde"] }
wgpu = "0.20"
winit = { version = "0.30", features = ["rwh_06"] }
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","console","Performance","Request","Response","RequestInit","RequestMode","Headers","WebSocket","MessageEvent","BinaryType","Location"] }
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
thiserror = "1"
anyhow = "1"
log = "0.4"
instant = "0.1"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["web_browser"] }
# layout for retained UI
taffy = "0.5"
# file watching for native (future)
notify = "6"
clap = { version = "4", features = ["derive"] }
# http server (dev) optional later
tiny_http = "0.12"
