#
# path: /Cargo.toml
# description: Cargo manifest for the Ironhold workspace
#

[workspace]
members = [
    "apps/editor_web",
    "apps/host_web",
    "crates/engine_core",
    "crates/engine_ecs",
    "crates/engine_render",
    "crates/engine_input",
    "crates/engine_assets",
    "crates/engine_scene",
    "crates/engine_ui",
    "crates/platform_web",
    "crates/editor_core",
    "crates/editor_ui",
    "crates/engine_wasm_api",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.metadata]
npm_package = "van-geest/ironhold"

# ✅ profiles belong here (not under `workspace.profile`)
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"