
[package]
name = "editor_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine_wasm_api = { path = "../../crates/engine_wasm_api" }
editor_ui = { path = "../../crates/editor_ui" }
eframe = { workspace = true }
egui = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }

[features]
default = []
