
[package]
name = "editor_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine_wasm_api = { path = "../../crates/engine_wasm_api" }
editor_ui = { path = "../../crates/editor_ui" }

# WebGPU backend for eframe (works in WASM when browser supports WebGPU)
eframe = { version = "0.29", default-features = false, features = ["wgpu"] }
egui   = { version = "0.29" }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window","Document","HtmlCanvasElement","console","Performance","Request",
  "Response","RequestInit","RequestMode","Headers","WebSocket","MessageEvent",
  "BinaryType","Location"
] }
console_error_panic_hook = "0.1"

[features]
default = []