#
# path: /crates/engine_assets/Cargo.toml
# description: Cargo manifest for the engine_assets crate
#

[package]
name = "engine_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "1"
wasm-bindgen = "0.2.105"
web-sys = "0.3.83"
js-sys = "0.3.83"
gltf = "1.4.1"
wasm-bindgen-futures = "0.4.56"

engine_scene = { path = "../engine_scene" }
engine_render = { path = "../engine_render" }
engine_types = { path = "../engine_types" }