#
# path: /crates/engine_wasm_api/Cargo.toml
# description: Cargo manifest for the WebAssembly API crate of the engine.
# This crate provides web-specific implementations and bindings for the engine.
# 

[package]
name = "engine_wasm_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","console"] }
console_error_panic_hook = "0.1"
serde_json = "1"
ron = "0.8"
js-sys = "0.3"
wgpu = "0.20"

engine_core = { path = "../engine_core" }
engine_scene = { path = "../engine_scene" }
engine_assets = { path = "../engine_assets" }
platform_web = { path = "../platform_web" }


# ✅ For the browser target, enable getrandom's JS backend (uses crypto.getRandomValues)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
