#
# path: /crates/engine_wasm_api/Cargo.toml
# description: Cargo manifest for the WebAssembly API crate of the engine.
# This crate provides web-specific implementations and bindings for the engine.
# 

[package]
name = "engine_wasm_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","console"] }
console_error_panic_hook = "0.1"
serde_json = "1"
ron = "0.8"
js-sys = "0.3"
wgpu = "27.0"

engine_core = { path = "../engine_core" }
engine_scene = { path = "../engine_scene" }
engine_assets = { path = "../engine_assets" }
platform_web = { path = "../platform_web" }
engine_render = { path = "../engine_render" }
engine_types = { path = "../engine_types" }
bytemuck = "1.24.0"


# ✅ For the browser target, enable getrandom's JS backend (uses crypto.getRandomValues)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
# Individual features
debug = []
hot_reload = []
styling = []

# Composite Feature Set 1 (for developers)
# Enables both debug and hot-reload
dev = ["debug", "hot_reload"] 

# Composite Feature Set 2 (for IDE/editor integration)
# Enables both styling and hot-reload
editor = ["styling", "hot_reload"]
