#
# path: /crates/platform_web/Cargo.toml
# description: Cargo manifest for the platform_web crate.
#

[package]
name = "platform_web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window","Document","HtmlCanvasElement","console","Performance","Request",
  "Response","RequestInit","RequestMode","Headers","WebSocket","MessageEvent",
  "BinaryType","Location","Blob", "FileReader"
] }
js-sys = "0.3"
wgpu = "27.0"
thiserror = "1"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
